# sport-agent-mvp

./: .gitignore  AGENT_CRITICAL_FIXES_APPLIED.md  AGENT_FIXES_SUMMARY.md  AGENT_QUICK_START.md  ARCHITECTURE_CURRENT.md  CHAT_GUIDE.md  CLEANUP_PLAN.md  CRITICAL_FIX_REACT_TO_FUNCTIONS.md  DOCS.md  ENTERPRISE_UPGRADE_PLAN.md  PROJECT_REFOCUS.md  PROJECT_REPORT.md  PROJECT_STATUS.md  QUICK_START.md  README.md  START_CHAT.md  START_HERE.md  TESTING_GUIDE.md  TEST_RESULTS.md  WHAT_NEXT.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  requirements-minimal.txt  requirements.txt
.claude/: settings.local.json
alembic/: env.py
config/: agent_tools.yaml  db.yaml  feature_store.yaml  model.yaml  service.yaml
docs/: AGENT_ARCHITECTURE.md  ARCHITECTURE_CURRENT.md  Agent设计文档.md  BUGFIX_ENTITY_RECOGNITION.md  COMPLETION_SUMMARY.md  DATABASE_QUERY_GUIDE.md  DATA_AUTHENTICITY_AUDIT.md  DATA_EXPANSION_SUMMARY.md  DATA_FIX_AND_EXPANSION_SUMMARY.md  DATA_FIX_SUMMARY.md  DATA_INGESTION_FAQ.md  DATA_INTENT_GUIDE.md  DATA_VOLUME_EXPANSION_REPORT.md  EXECUTIVE_SUMMARY.md  FILE_CLEANUP_REPORT.md  HARDCODE_AUDIT.md  LOCAL_LLM_INTEGRATION.md  LOCAL_LLM_SETUP.md  PREDICTION_ACCURACY_ISSUE.md  PREDICTION_CODE_REVIEW.md  PREDICTION_MODEL_GUIDE.md  PREDICTION_MVP_COMPLETE.md  PREDICTION_NEXT_STEPS.md  PREDICTION_ROADMAP.md  PREDICTION_TEST_STATUS.md  PROJECT_PROGRESS_REPORT.md  SIMPLIFIED_ARCHITECTURE.md  SportAgent_TechSpec_v2_FULL.md  TEAM_ALIAS_FIX_GUIDE.md  TESTING_GUIDE.md  TEST_RESULTS_ANALYSIS.md  TRANSACTION_FIX_REPORT.md  ZERO_HARDCODE_IMPLEMENTATION.md  agent-design.md  (+10 more)
(+107 files in other folders)
