[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sport-agent"
version = "0.1.0"
description = "Sport Agent 智能体育平台 MVP"
authors = [{ name = "Sport Agent Team" }]
readme = "docs/sport-agent-tech-design.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "lightgbm>=4.5",
    "mlflow>=2.16",
    "redis>=5.0",
    "httpx>=0.27",
    "bentoml>=1.2",
    "python-dotenv>=1.0",
    "loguru>=0.7"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
